[package]
name = "webhook-listener"
version = "0.1.0"
edition = "2021"

[dependencies]
dotenv = { version = "0.15.0" }
env_logger = { version = "^0.9.0" }
log = { version = "^0.4.1" }
tide = { version = "^0.16.0" }
blinkrs = { version = "^1.0" }
async-std = { version = "1.6.0", features = ["attributes"] }
serde = { version = "1.0", features = ["derive"] }
