[package]
name = "milton"
version = "0.2.2"
edition = "2021"
publish = false

[lib]
name = "milton"
path = "src/lib.rs"

[[bin]]
name = "milton"
path = "src/bin/milton.rs"

[dependencies]
dotenv = { version = "0.15.0" }
env_logger = { version = "^0.9.0" }
log = { version = "^0.4.1" }
tide = { version = "^0.16.0" }
blinkrs = { version = "^2.0" }
async-std = { version = "1.6.0", features = ["attributes"] }
serde = { version = "1.0", features = ["derive"] }
chrono = { version = "^0.4" }
surf = { version = "^2.3.0" }
jsonwebtoken = { version = "^7.2.0" }
