[package]
name = "milton-alexa"
version = "0.1.0"
edition = "2021"

[lib]
name = "milton_alexa"
path = "src/lib.rs"


[dependencies]
async-std = "^1.12"
chrono = "^0.4"
clap = { version = "^4.0", features = ["derive", "cargo"] }
dotenv = "^0.15"
env_logger = "^0.10"
futures-lite = "^1.12"
log = "^0.4"
quick-xml = "^0.26"
serde = { version = "^1.0", features = ["derive"] }
surf = "^2.3"
tide = "^0.16"
toml = "^0.5"
uuid = { version = "^1.2", features = ["v4"] }
