[package]
name = "milton"
# not using version field; this is an application for now; sha is fine.
version = "0.0.0"
edition = "2021"
publish = false

[lib]
name = "milton"
path = "src/lib.rs"

[[bin]]
name = "milton"
path = "src/bin/milton.rs"

[dependencies]
env_logger = { version = "^0.9.0" }
log = { version = "^0.4.1" }
uuid = { version = "^0.8", features = ["v4"] }
tide = { version = "^0.16.0" }
async-std = { version = "^1.6.0", features = ["attributes"] }
serde = { version = "^1.0", features = ["derive"] }
serde_json = { version = "^1.0" }
chrono = { version = "^0.4" }
surf = { version = "^2.3.0" }
jsonwebtoken = { version = "^7.2.0" }
toml = { version = "^0.5.9" }
dotenv = "^0.15.0"
serialport = { version = "^4.2.0", default-features = false }
clap = { version = "^4.0.18", features = ["derive"] }
kramer = { version = "^1.3.2", features = ["async-std", "kramer-async"] }
