[package]
name = "milton"
# not using version field; this is an application for now; sha is fine.
version = "0.0.0"
authors = ["Danny Hadley <dadleyy@gmail.com>"]
edition = "2021"
publish = false

[lib]
name = "milton"
path = "src/lib.rs"

[[bin]]
name = "milton"
path = "src/bin/milton.rs"

[[bin]]
name = "milton-cli"
path = "src/bin/milton-cli.rs"

[features]
default = []
camera = ["v4l"]

[dependencies]
env_logger = { version = "^0.9" }
log = { version = "^0.4" }
uuid = { version = "^0.8", features = ["v4"] }
tide = { version = "^0.16" }
async-std = { version = "^1.6", features = ["attributes"] }
serde = { version = "^1.0", features = ["derive"] }
serde_json = { version = "^1.0" }
chrono = { version = "^0.4", features = ["serde"] }
surf = { version = "^2.3" }
jsonwebtoken = { version = "^7.2" }
toml = { version = "^0.5" }
dotenv = "^0.15"
serialport = { version = "^4.2", default-features = false }
clap = { version = "^4.0", features = ["derive", "cargo"] }
kramer = { version = "^1.3", features = ["async-std", "kramer-async"] }
futures = { version = "^0.3" }
v4l = { version = "^0.13", features = ["v4l2"], optional = true }
